chore(ci): add all-unnamed flag